#72 Fixed shift creator text color
Fixed shift creator color that was an illegible white

--- a/client/src/app/pages/dashboard/dashboard.component.scss
+++ b/client/src/app/pages/dashboard/dashboard.component.scss
@@ -6,7 +6,7 @@
   }
 
 .mat-drawer-container{
-    color: white;
+    color: black;
 }
 
 .bg-container{
